compiler/src/test/resources/golden/errors/ctorvalue_nullary.dawn
pub fn main() -> Unit !io = {
  let ys = map([1, 2], None)
  println("x")
}
