compiler/src/test/resources/golden/errors/ctorvalue_nullary.err
error: cannot infer type parameter(s) U for `map`
  --> ctorvalue_nullary.dawn:2:12
  |
2 |   let ys = map([1, 2], None)
  |            ^^^^^^^^^^^^^^^^^
  = hint: add a type annotation at the use site
error: `None` is a value, not a function (it takes no fields)
  --> ctorvalue_nullary.dawn:2:24
  |
2 |   let ys = map([1, 2], None)
  |                        ^^^^
  = hint: use it directly; only constructors with fields can be passed as functions
